--- a/starter/package.json
+++ b/starter/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "scripts": {
     "dev": "maizzle serve",
-    "build": "maizzle build production"
+    "build": "maizzle build"
   },
   "dependencies": {
     "@maizzle/framework": "file:../framework/maizzle-framework-5.0.0-beta.32.tgz"
