--- a/framework/package.json
+++ b/framework/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@maizzle/framework",
-  "version": "5.0.0-beta.32",
+  "version": "5.0.1",
   "description": "Maizzle is a framework that helps you quickly build HTML emails with Tailwind CSS.",
   "license": "MIT",
   "type": "module",
@@ -48,9 +48,8 @@
     "html-emails"
   ],
   "dependencies": {
-    "@csstools/css-calc": "^2.0.1",
-    "@maizzle/cli": "next",
-    "@tailwindcss/postcss": "next",
+    "@maizzle/cli": "^2.0.0",
+    "@tailwindcss/postcss": "^4.0.8",
     "cheerio": "^1.0.0",
     "chokidar": "^3.6.0",
     "cli-table3": "^0.6.5",
@@ -67,14 +66,16 @@
     "lodash-es": "^4.17.21",
     "morphdom": "^2.7.4",
     "ora": "^8.1.0",
-    "pathe": "^1.1.2",
+    "pathe": "^2.0.0",
     "postcss": "^8.4.49",
-    "postcss-custom-properties": "^14.0.4",
+    "postcss-calc": "^10.0.2",
+    "postcss-css-variables": "^0.19.0",
+    "postcss-import": "^16.1.0",
     "postcss-safe-parser": "^7.0.0",
     "posthtml": "^0.16.6",
     "posthtml-attrs-parser": "^1.1.1",
     "posthtml-base-url": "^3.1.4",
-    "posthtml-component": "^2.0.0",
+    "posthtml-component": "^2.1.0",
     "posthtml-content": "^2.1.0",
     "posthtml-expressions": "^1.11.4",
     "posthtml-extra-attributes": "^3.1.0",
@@ -90,17 +91,16 @@
     "posthtml-widows": "^1.0.0",
     "pretty": "^2.0.0",
     "string-strip-html": "^13.4.8",
-    "tailwindcss": "next",
-    "postcss-css-variables": "latest",
+    "tailwindcss": "^4.0.8",
     "ws": "^8.18.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.2",
     "@types/js-beautify": "^1.14.3",
     "@types/markdown-it": "^14.1.2",
-    "@vitest/coverage-v8": "^2.1.5",
+    "@vitest/coverage-v8": "^3.0.4",
     "supertest": "^7.0.0",
-    "vitest": "^2.1.5"
+    "vitest": "^3.0.3"
   },
   "engines": {
     "node": ">=18.20"
